k8s/overlays/prod-remote/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etiqtech
spec:
  template:
    spec:
      containers:
        - name: etiqtech
